--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,29 @@ footer {
   font-family: 'Indie Flower', cursive;
 
 }
+
+@media (max-width:1023px){
+  h1{
+    font-size: 15rem;
+  }
+  .dice p{
+    font-size: 5rem;
+    /* margin-top: 1%; */
+    margin: 5% 0;
+  }
+  p.result{
+    font-size: 5rem;
+  }
+  .dice{
+    width: 70%;
+    display: block;
+    text-align: center;
+    margin: auto;
+  }
+  .container{
+    text-align: center;
+  }
+  footer{
+    font-size: 3rem;
+  }
+}
